<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/kvizovi"
        android:title="Kvizovi"
        android:icon="@drawable/quiz"/>
    />
    <item
        android:id="@+id/predmeti"
        android:title="Predmeti"
        android:icon="@drawable/subject"/>
    />
    <item
        android:id="@+id/predajKviz"
        android:title="Predaj kviz"
        android:icon="@drawable/submit"/>
    />
    <item
        android:id="@+id/zaustaviKviz"
        android:title="Zaustavi kviz"
        android:icon="@drawable/stop"/>
    <item
        android:id="@+id/invisible"
        android:title="Invisible"
        android:visible="false"/>
</menu>